修改工作流文件

--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -6,7 +6,7 @@ on:
       - '*'  # 当有新的 tag 被推送到仓库时触发此工作流
 
 jobs:
-  generate-changelog:
+  生成changelog:
     runs-on: ubuntu-latest  # 使用 Ubuntu 最新版作为运行环境
     steps:
       - name: Checkout code
@@ -37,6 +37,6 @@ jobs:
           if git diff --staged --quiet; then
             echo "No changes to commit"
           else
-            git commit -m "chore: update CHANGELOG"
-            git push
+            git commit -m "chore: 更新CHANGELOG"
+            git push origin master
           fi
