--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0  # 获取完整的提交历史，方便生成准确的变更日志
-
+          ref: master  # 明确指定检出 master 分支
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
