--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "duyi-study",
-  "version": "0.1.9",
+  "version": "0.1.10-0",
   "description": "",
   "homepage": "https://github.com/jcz-sudo4770/duyi#readme",
   "bugs": {
