--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0"
   },
   "devDependencies": {
-    "conventional-changelog-cli": "^5.0.0"
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
+    "commitlint-config-gitmoji": "^2.3.1",
+    "conventional-changelog-cli": "^5.0.0",
+    "husky": "^9.1.7"
   }
 }
