--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "duyi-study",
-  "version": "0.0.1",
+  "version": "0.0.2-0",
   "description": "",
   "homepage": "https://github.com/jcz-sudo4770/duyi#readme",
   "bugs": {
