build(changelog): 更新 changelog 配置和依赖
- 添加 conventional-changelog-conventionalcommits 依赖
- 创建自定义 changelog 配置文件
- 更新 CI 工作流以使用新的配置文件

--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -36,7 +36,7 @@ jobs:
 
       - name: Generate Changelog between two tags
         run: |
-          npx conventional-changelog -p conventionalcommits -i CHANGELOG.md -s -r 0 --from ${{ steps.tags.outputs.previous_tag }} --to ${{ steps.tags.outputs.current_tag }}
+          npx conventional-changelog -p ./changelog.config.js -i CHANGELOG.md -s -r 0 --from ${{ steps.tags.outputs.previous_tag }} --to ${{ steps.tags.outputs.current_tag }}
         # --from：指定起始标签或提交哈希
         # --to：指定结束标签或提交哈希
 
