--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@commitlint/config-conventional": "^19.8.1",
     "commitlint-config-gitmoji": "^2.3.1",
     "conventional-changelog-cli": "^5.0.0",
+    "conventional-changelog-conventionalcommits": "^9.0.0",
     "husky": "^9.1.7"
   }
 }
