ci(changelog): 在changelog工作流中添加版本检查步骤
在生成changelog的工作流中添加npm version检查步骤，用于输出当前版本信息以便调试

--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -23,6 +23,13 @@ jobs:
       - name: Install dependencies
         run: npm install  # 安装项目依赖，包含 conventional-changelog-cli
 
+      - name: update version
+        run: |
+          echo "输出所有版本号（Git 标签）:"
+          git tag -l
+          echo "执行 npm version 命令"
+          npm version
+
       - name: Get previous and current tags
         id: tags
         run: |
