chore: 更新 package.json 中的版本号至 0.0.2-7

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "duyi-study",
-  "version": "0.0.2-alpha.0",
+  "version": "0.0.2-7",
   "description": "",
   "homepage": "https://github.com/jcz-sudo4770/duyi#readme",
   "bugs": {
