ci(changelog): 更新工作流以包含package.json
修改changelog.yml工作流文件，在生成变更日志时将package.json也加入版本控制。这样可以确保版本号变更与变更日志保持同步。

--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -61,7 +61,7 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git add CHANGELOG.md
+          git add CHANGELOG.md package.json
           if git diff --staged --quiet; then
             echo "版本无差异！！！"
           else
